# s6_agentic_architecture

./: README.md  main.py  pyproject.toml
code/: action.py  agent6.py  agent_server.py  agent_ui.html  artifacts.py  decision.py  events.py  gateway.py  mcp_server.py  memory.py  perception.py  schemas.py  test_crawl4ai.py  usage.json
llm_gatewayV3/: README.md  client.py  db.py  main.py  run.sh  schemas.py
llm_gatewayV3/static/: dashboard.html
notes/: Agent6 - Live Trace - Output 1.html  Agent6 - Live Trace - Output 2a.html  Agent6 - Live Trace - Output 3a.html  Agent6 - Live Trace - Output 3b.html  problem_statement.md  target_queries.md
notes/run2/: Agent6 · Live Trace 1.html  Agent6 · Live Trace 2.html  Agent6 · Live Trace 3a.html  Agent6 · Live Trace 3b.html  Agent6 · Live Trace 4 gcp.html  Agent6 · Live Trace 4.html
